--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Dasimoto's Arts & Crafts</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   
   <body>
