--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
       <span><h2>Brushes</h2></span>
       <img src="hacksaw.jpeg">
       <h3>Hacksaw Brushes</h3>
-      <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes.</p>
-      <p class="cost">Starting at $3.00 / brush</p>
+      <p>Made of the highest quality oak, Hacksaw brushes are known 
+        for their weight and ability to hold paint in large amounts. 
+        Available in different sizes. <span>Starting at $3.00 / brush</span></p>
     </section>
   </body>
 </html>
