--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </header>
     
     <section class="brushes">
-      <span><h2>Brushes</h2></span>
+      <h2>Brushes</h2>
       <img src="hacksaw.jpeg">
       <h3>Hacksaw Brushes</h3>
       <p>Made of the highest quality oak, Hacksaw brushes are known 
