--- a/index.html
+++ b/index.html
@@ -27,5 +27,15 @@
          birchwood, and PDE. Select frames can be sanded and painted 
          according to your needs. <span>Starting at $2.00 / frame.</span></p>
     </section>
+    
+    <section>
+      <h2>Paint</h2>
+      <img src="finnish.jpeg">
+      <h3>Clean Finnish Paint</h3>
+      <p>Imported paint from Finland. Over 256 colors available in-store, 
+         varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds 
+         to canvas, increasing the finish and longevity of any artwork. <span>
+         Starting at $5.00 / tube.</span></p>
+    </section>
   </body>
 </html>
