--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
          according to your needs. <span>Starting at $2.00 / frame.</span></p>
     </section>
     
-    <section>
+    <section class="paint">
       <h2>Paint</h2>
       <img src="finnish.jpeg">
       <h3>Clean Finnish Paint</h3>
